# botzela-schedule

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  docker-compose.yml  flake.nix  fly.toml  rust-toolchain.toml
.github/workflows/: fly.yml  nix.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: mod.rs  schedule.rs
backend/src/structs/: schedule.rs
common/: Cargo.toml
common/src/: schedule.rs
frontend/: Cargo.toml  index.html
frontend/public/css/: style.css
frontend/src/: api.rs  lib.rs  main.rs
frontend/src/components/: day.rs  header.rs  mod.rs  notfound.rs  schedule.rs  session.rs  week.rs
