[package]
name = "front_schedule_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }

leptos = "0.6.11"
leptos_router = { version = "0.6.11", features = ["csr"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwasm = "0.5.0"
thiserror = "1.0.59"
serde-wasm-bindgen = "0.6.5"
gloo-net = "0.5.0"
