[package]
name = "front_schedule_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }

leptos = "0.6.12"
leptos_router = { version = "0.6.12", features = ["csr"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
reqwasm = "0.5.0"
thiserror = "1.0.61"
serde-wasm-bindgen = "0.6.5"
gloo-net = { version = "0.5.0", features = ["json", "serde_json"] }
reqwest = { version = "0.12.5", features = ["json"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
