[package]
name = "front_schedule_leptos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "front_schedule_leptos"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }

leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7.3" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwasm = "0.5.0"
thiserror = "2.0.11"
serde-wasm-bindgen = "0.6.5"
gloo-net = { version = "0.6.0", features = ["json", "serde_json"] }
reqwest = { version = "0.12.12", features = ["json"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.25"
